# datashuttle

./: .buildinfo  .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.CFF  CNAME  CONTRIBUTING.md  INHERITANCE_FEEDBACK.md  LICENSE  MANIFEST.in  README.md  TODOS.txt  api_index.html  conftest.py  docker-compose.yml  genindex.html  index.html  mypy.ini  notes.md  objects.inv  output.json  output.txt  project1.py  pyproject.toml  requirements.txt  run_pyinstaller.py  search.html  searchindex.js  setup.cfg  setup.py  to_fix.txt
.doctrees/: api_index.doctree  environment.pickle  index.doctree
.doctrees/pages/: api_index.doctree  cli_index.doctree  documentation.doctree  get_started.doctree  how_tos.doctree  tutorials.doctree
.github/workflows/: code_test_and_deploy.yml  conda_install_check.yml  cron_tests.yml  docs_build_and_deploy.yml  package_macos.yml  package_windows.yml  publish_docs.yml  run_secure_tests_on_forked_pr.yml  test_and_deploy.yml  weekly_cron_job_all_tests.yml
_modules/: index.html
_modules/datashuttle/: datashuttle.html  datashuttle_class.html  datashuttle_functions.html
_sources/: api_index.rst.txt  index.md.txt
_sources/pages/: api_index.rst.txt  cli_index.rst.txt  documentation.md.txt  get_started.md.txt  how_tos.md.txt
_static/: documentation_options.js
_static/css/: custom.css
datashuttle/: .coverage  __init__.py  __main__.py  cli_launcher.py  command_line_interface.py  configs.py  conftest.py  datashuttle.py  datashuttle.spec  datashuttle_class.py  datashuttle_functions.py  logging.py  run_app.py  run_app_.py  test_command_line_interface.py  tui_launcher.py
datashuttle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datashuttle/_vendored/: bg_atlasapi.py
datashuttle/configs/: aws_regions.py  canonical_configs.py  canonical_directories.py  canonical_directories_and_tags.py  canonical_folders.py  canonical_tags.py  config_class.py  configs.py  links.py  load_configs.py  rclone_configs.py  regions.py
datashuttle/converters/: convert_sumiya.py  run_convert_sumiya.py
datashuttle/tests/: test_configs.py  test_filesystem_transfer.py  test_make_dirs.py  test_utils.py
datashuttle/tui/: app.py  configs.py  custom_widgets.py  ds_interface.py  interface.py  project_config.py  project_select.py  run_app.py  tab_screen.py  tooltips.py  tui_app.py
datashuttle/utils/: .coverage  aws.py  custom_exceptions.py  custom_types.py  data_transfer.py  data_transfer_ORIG.py  decorators.py  directories.py  directory_class.py  ds_logger.py  folder_class.py  folders.py  formatting.py  gdrive.py  getters.py  rclone.py  rclone_encryption.py  rclone_password.py  rclone_utils.py  ssh.py  test_file.xml  test_tree.py  transfer_output_class.py  utils.py  validation.py
datashuttle/utils_mod/: canonical_configs.py  decorators.py  directory_class.py  http_utils.py  rclone_utils.py  supply_config_utils.py  utils.py
dev/: genindex.html  index.html  objects.inv  output.json  output.txt  search.html  searchindex.js
dev/_modules/: index.html
dev/_static/: switcher.json
dev/pages/: api_index.html
docs/: datashuttle_figure_machines-dark.ai  prog.s  rebuild.py  requirements.txt
docs/source/: api_index.rst  conf.py  index.md  index.rst  intro.md  screenshots-gifs-notes.md  screenshots-gifs-notes.txt  taking-screenshot-notes.txt  troubleshooting.rst
joss-paper/: README.md  paper.bib  paper.md
manager/: TODO.py  configs.py  conftest.py  manager.py  test.py  test_configs.py  test_filesystem_transfer.py  test_make_dirs.py  test_utils.py  utils.py
manager/rclone/: rclone.py  test.h
manager/tests/: test.py  test_configs.py  test_filesystem_transfer.py  test_make_dirs.py  test_utils.py
manager/utils/: utils.py
manager/utils_mod/: decorators.py  http_utils.py  rclone_utils.py  utils.py
package/: README.md  TODO.txt  apple-notarisation-notes.md  datashuttle.spec  datashuttle_launcher.py  make_inno_setup_script.py  notes.txt  package.py  package_linux.py  package_macos.py  package_windows.py  packaging.md  packaging_utils.py  terminal_launcher.py  terminal_launcher.spec  terminal_launcher_macos.py  terminal_launcher_macos.spec  terminal_launcher_windows.py  terminal_launcher_windows.spec  wezterm_config.lua
package/macos/: entitlements.plist  package_macos.py  sign_macos.py  terminal_launcher_macos.py  terminal_launcher_macos.spec
package/windows/: make_inno_setup_script.py  package_windows.py  terminal_launcher_windows.py
pages/: api_index.html  cli_index.html  documentation.html  get_started.html  how_tos.html  tutorials.html
pages/community/: contributing.html  guiding-principles.html  index.html  roadmap.html
pages/examples/: acquisition-script.html  index.html  lab-project-checker.html
pages/get_started/: getting-started.html  index.html  install.html  quick-validate-project.html  set-up-a-project.html
pages/how_tos/: choose-a-terminal.html  create-folders.html  install.html  make-a-full-project.html  make-a-local-project.html  make-a-new-project.html  quick-validate-project.html  read-logs.html  top-level-folder.html  transfer-data.html  update-configs.html  use-name-templates.html
pages/tutorials/: getting_started.html
pages/user_guides/: choose-a-terminal.html  create-folders.html  index.html  read-logs.html  set-up-a-project.html  transfer-data.html  update-configs.html  use-name-templates.html  use-validation-templates.html  validate.html
tests/: .coverage  base.py  configs_for_ssh_tests.yaml  conftest.py  quick_make_project.py  setup_ssh_test_keys.py  setup_test_once.py  ssh_test_utils.py  test_command_line_interface.py  test_configs.py  test_date_search_range.py  test_filesystem_transfer.py  test_make_dirs.py  test_utils.py
tests/ssh_test_images/: Dockerfile
v0.8.0/: genindex.html  index.html  output.json  output.txt  search.html
v0.9.0/: genindex.html  index.html  output.json  search.html
v0.9.1/: genindex.html  index.html  output.json  output.txt  search.html
v0.9.2/: genindex.html  index.html  output.json  output.txt  search.html  searchindex.js
(+370 files in other folders)
